--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,19 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	implementation 'commons-dbcp:commons-dbcp:1.4'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+
+	implementation group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.880'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+	//implementation 'org.springframework.boot:spring-boot-starter'
+	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
